--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -15,5 +15,20 @@ services:
       POSTGRES_USER: nimbus_user
       POSTGRES_PASSWORD: nimbus_pass
 
+  vault:
+    image: hashicorp/vault:1.21.1
+    container_name: nimbus-vault
+    restart: always
+    ports:
+      - "8200:8200"
+    volumes:
+      - nimbus_vault_data:/vault/file
+    environment:
+      VAULT_DEV_ROOT_TOKEN_ID: "root-token"
+      VAULT_DEV_LISTEN_ADDRESS: "0.0.0.0:8200"
+    command: "server -dev -dev-root-token-id=root-token -dev-listen-address=0.0.0.0:8200"
+
+
 volumes:
   nimbus_pg_data:
+  nimbus_vault_data:
