--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,25 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud.version>2025.0.1</spring-cloud.version>
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<apache-commons.version>3.18.0</apache-commons.version>
 		<springdoc.version>2.8.0</springdoc.version>
 		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 
@@ -37,6 +50,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- Spring Cloud Vault Config -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-vault-config</artifactId>
 		</dependency>
 
 		<!-- Bean Validation with Hibernate validator -->
