--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,8 +1,3 @@
-DB_URL: jdbc:postgresql://localhost:5432/nimbus
-DB_USER: nimbus_user
-DB_PASS: nimbus_pass
 
-GITHUB_CLIENT_ID: Ov23lizQp9vD3ixrAaVn
-GITHUB_CLIENT_SECRET: ff04c56fe8e3ad5af1f09e9650db6769cf8e4c90
-GITHUB_SCOPE: read:user,user:email
-
+VAULT_URI: http://localhost:8200
+VAULT_TOKEN: root-token
